# Tangent-Compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  parser.output  parser.tab.c  parser.tab.h  temp.cpp
.github/workflows/: makefile.yml
Misc/: sample_code.tngt
Presentations_and_Slides/lexer/: PPT_grp4.pptx
TestCases/Correct Codes/: test1.tngt
TestCases/Incorrect Codes/: test2.tngt
documentation/: Tangent Language Specification.docx  parser.html
documentation/Presentations and Slides/Lexer/: temp.txt
lexer/: Makefile  lex.yy.c  lexer  lexer.l  token.h  token.h.save
lexer/Lexer-Tests/: test.tngt
lexer/Lexer-Tests/Correct-Codes/: test1.tngt  test2.tngt  test3.tngt
lexer/Lexer-Tests/Incorrect-Codes/: errortest1.tngt
src/: .lexer.l.swp  Makefile  astNodes.cpp  astNodes.h  astNodes.h.save  codeGen.cpp  lex.yy.c  lexer.l  parser  parser.dot  parser.output  parser.tab.c  parser.tab.cc  parser.tab.hh  parser.y  parser.ypp  parser.yy  symbol-table.c  symbolTable.cpp  symbolTable.h
src/Parser-Tests/: .test12.tngt.swp  .test6.tngt.swp  errortest1.tngt  errortest10.tngt  errortest14.tngt  errortest2.tngt  errortest3.tngt  errortest5.tngt  errortest7.tngt  errortest8.tngt  errortest9.tngt  test1.tngt  test10.tngt  test11.tngt  test12.tngt  test2.tngt  test3.tngt  test3.tngt.save  test4.tngt  test5.tngt  test6.tngt  test7.tngt  test8.tngt  test9.tngt
tests/: run_tests.sh
tests/Lexer_Tests/Correct_codes/: comments.tngt  dataTypes.tngt  family-and-functions.tngt  ifElse.tngt  literals.tngt  loops-jumps.tngt  operators.tngt  test1.tngt  test2.tngt  test4.tngt
(+26 files in other folders)
